--- a/frontend/src/universal/components/common/preloader/preloader.scss
+++ b/frontend/src/universal/components/common/preloader/preloader.scss
@@ -1,32 +1,16 @@
 .preloader {
-  position: fixed;
-  top: 0;
+  position: absolute;
+  top: $site-header-height;
   bottom: 0;
   right: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
-  background-color: #22282e;
+  height: calc(100vh - $site-header-height);
   display: flex;
   align-items: center;
   justify-content: center;
 
   .icon {
-    width: 92px;
-  }
-
-  :global {
-    .brackets {
-      :local {
-        animation: rotateY 1.1s infinite linear;
-      }
-      transform-origin: 50% 50%;
-    }
-  }
-}
-
-@keyframes rotateY {
-  to {
-    transform: rotateY(360deg);
+    width: 20vw;
   }
 }
